# atls-4630-midterm-scheduler

./: README.md
backend/: Cargo.toml
backend/migrations/: 0001_init.sql  0002_add_email_unique_index.sql
backend/src/: main.rs
backend/static/: index.html
backend/static/assets/: index-BSCyOtU8.js  index-Bt2NXpFI.js  index-Cn71hAQY.js  index-DDoSw3Kd.css  index-DKycWINT.css  index-DzEF9X_B.js  index-QJzFluuu.js
frontend/: index.css  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.ripple  Login.ripple  Spinner.ripple  Timeslot.d.ts  TimeslotDetails.ripple  TimeslotDto.d.ts  Timeslots.ripple  index.ts
