[package]
name = "midterm-scheduler-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
shuttle-axum = "0.57.0"
shuttle-runtime = "0.57.0"
shuttle-shared-db = { version = "0.57.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "time"] }
time = { version = "0.3", features = ["macros", "serde"] }
tokio = "1.28.2"
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures-util = "0.3"
